--- a/components/container.module.scss
+++ b/components/container.module.scss
@@ -1,20 +1,18 @@
 @use '../sass/abstracts/mixins';
 
 .container {
-    //background-color: yellow;
-    width: 100%;
+  
     margin: 0 auto;
-    padding: 0 1rem;
-    @include mixins.breakpoint(tablet) {
-        //background-color: orange;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    @include mixins.breakpoint('tablet') {
         width: 700px;
     }
-    @include mixins.breakpoint(laptop) {
-        //background-color: red;
-        width: 980px;
+    @include mixins.breakpoint('laptop') {
+        width: 1000px;
     }
-    @include mixins.breakpoint(desktop) {
-       // background-color: violet;
-        width: 1140px;
+    @include mixins.breakpoint('desktop') {
+        width: 1200px;
     }
 }
