--- a/components/grid.module.scss
+++ b/components/grid.module.scss
@@ -1,14 +1,24 @@
 @use '../sass/abstracts/mixins';
 
 .grid {
-    //background-color: pink;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    @include mixins.breakpoint(tablet) {
-        grid-template-columns: repeat(3, 1fr);
-    }
-    @include mixins.breakpoint(laptop) {
-        grid-template-columns: repeat(4, 1fr);
+  
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .gridItem {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 1rem;
+        @include mixins.breakpoint(tablet) {
+            width: 50%;
+        }
+        @include mixins.breakpoint(tablet) {
+            width: calc(100%/3);
+        }
+       .gridItemImage {
+    
+            width: 100%;
+            height: auto;
+       } 
     }
 }
