--- a/components/colorpicker.module.scss
+++ b/components/colorpicker.module.scss
@@ -2,15 +2,13 @@
 @use '../sass/abstracts/mixins';
 
 .colorpicker {
-  
+   // background-color: limegreen;
     margin-bottom: 2rem;
     padding: 1rem;
     text-align: center;
     .large_image_relative_parent {
         position: relative;
-
         height: 0;
-
         padding-bottom: calc((607 / 1150) * 100%);
         @include mixins.breakpoint(laptop) {
            padding-bottom: calc((52% * 700px) / 100%);
@@ -21,7 +19,6 @@
         top: 0;
         left: 0;
         z-index: 1;
-   
         width: 100%;
     }
     .large_image {
@@ -43,7 +40,6 @@
 .swatch {
     width: 3rem;
     height: 3rem;
-  
     transition: all .5s;
     &.active {
         border: 2px solid vars.$color_blue;
