--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -4,11 +4,11 @@ h1, h2, h3, h4, h5, h6, p, body, ul, li {
     font: inherit;
 }
 ul, li {
-    list-style: none; /* removes bullets */
+    list-style: none; 
 }
 * {
-    box-sizing: border-box; /* invert padding */
+    box-sizing: border-box; 
 }
 img {
-    vertical-align: top; /* removes white space below image */
+    vertical-align: top; 
 }
