--- a/components/grid.module.scss
+++ b/components/grid.module.scss
@@ -21,4 +21,22 @@
             height: auto;
        } 
     }
+    display: flex;
+flex-wrap: wrap;
+justify-content: center;
+
+.item {
+  width: 50%;
+  /* background-color: yellow; */
+  text-align: center;
+
+  @include mixins.breakpoint(tablet) {
+    width: calc(100% / 3);
+  }
+
+  @include mixins.breakpoint(laptop) {
+    width: calc(100% / 4);
+  }
+}
+
 }
