--- a/components/heading.module.scss
+++ b/components/heading.module.scss
@@ -3,7 +3,7 @@
 .heading {
     font-family: Arial;
     font-weight: bold;
-    &.heading1 {
+    &1 {
         font-size: 2rem;
         @include mixins.breakpoint('tablet') {
             font-size: 2.5rem;
@@ -12,21 +12,25 @@
             font-size: 3rem;
         }
     }
-    &.heading2 {
-        font-size: 1.25rem;
-        @include mixins.breakpoint('tablet') {
-            font-size: 1.5rem;
-        }
-        @include mixins.breakpoint('laptop') {
-            font-size: 2rem;
-        }
+
+&2 {
+    font-size: 1rem;
+    @include mixins.breakpoint('tablet') {
+        font-size: 2rem;
     }
-    &.heading3 {
-        font-size: 1.25rem;
+    @include mixins.breakpoint('laptop') {
+        font-size: 2rem;
     }
-    a {
-        color: black;
-        text-decoration: none;
-    }
-    @include mixins.textAligns();
+}
+&3 {
+    font-size: 1.75rem;
+}
+&font-color-green {
+    color: black;
+    text-decoration: none;
+}
+@include mixins.fontColor();
+@include mixins.textAligns();
+@include mixins.margins();
+
 }
