--- a/components/paragraph.module.scss
+++ b/components/paragraph.module.scss
@@ -4,5 +4,17 @@
     font-size: 1rem;
     line-height: 1.35;
     font-family: Arial;
-    @include mixins.colors();
+    color:black;
+}
+
+a{
+color:blue;
+font-weight: bold;
+}
+
+@include mixins.breakpoint (tablet){
+    font-size: 1.0rem;
+}
+@include mixins.breakpoint (laptop) {
+font-size:-1.1rem;
 }
