--- a/components/showcase.module.scss
+++ b/components/showcase.module.scss
@@ -1,43 +1,33 @@
-@use '../sass/abstracts/mixins';
-
 .showcase {
+    background-color: limegreen;
+  }
+  
+  &__text {
     background-color: black;
-    position: relative;
+    padding: 2rem;
+  
     @include mixins.breakpoint(laptop) {
-        height: calc(100vh - 5rem);
+      position: absolute;
+      bottom: 2rem;
+      left: 2rem;
+      z-index: 5;
     }
-    &_image {
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        @include mixins.breakpoint(laptop) {
-            //background-color: red;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1;
-            width: 100%;
-            height: calc(100vh - 5rem);
-        }
-    }
-    &_text {
-        color: white;
-        padding: 2rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        @include mixins.breakpoint(laptop) {
-            //background-color: aqua;
-            width: 50%;
-            height: calc(100vh - 5rem);
-            position: relative;
-            z-index: 2;
-            justify-content: flex-end;
-            align-items: flex-start;
-            padding: 0;
-            padding-bottom: 2rem;
-        }
-    }
+  }
+  
+  &__image {
+    width: 100%;
+    height: auto;
+  }
+  @include mixins.breakpoint(laptop){
+  &__gradient {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(0deg, rbga(0,0,0,1),0%, 
+    rbga(0,0,0,0)50%);
+    z-index: index 2; 
+  }
 }
