--- a/components/swatches.module.scss
+++ b/components/swatches.module.scss
@@ -1,25 +1,28 @@
-@use '../sass/abstracts/vars';
+
 
 .swatches {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    background-color: vars.$color_blue;
-    .swatch {
-        list-style: none; 
-        margin: 0;
+    &__list {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      background-color: pink;
+      display: flex;
+      justify-content: center;
+      gap: 5rem;
+  
+      &__item {
         padding: 0;
+        margin: 0;
+        list-style: none;
+        background-color: yellow;
         width: 3rem;
         height: 3rem;
-        background-color: gray;
-        border: 5px solid transparent;
         cursor: pointer;
-        transition: all .5s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &.active {
-            border-color: limegreen;
+        &.active{
+            border:3px solid vars.$color_primary;
+
         }
+      }
     }
-}
+  }
+  
